<resources>
    <string name="app_name">RendeVu</string>
    <string name="text_planned_dates">Planned Dates</string>
    <string name="text_past_dates">Past Dates</string>
    <string name="text_chaperones">Chaperones</string>
    <string name="text_home">Home</string>
    <string name="add_date">Add Date</string>
    <string name="my_chaperones">My Chaperones</string>
    <string name="add_chaperone">Add Chaperone</string>
    <string name="enter">Enter</string>
    <string name="enter_chaperone_name">Chaperone Name</string>
    <string name="new_chaperone">New Chaperone</string>
    <string name="enter_phone_number">Chaperone Phone Number</string>
    <string name="start_date">Start Date</string>
    <string name="remove">Remove</string>
    <string name="remove_chaperone">Remove Chaperone</string>
    <string name="edit">Edit</string>
    <string name="current_location">location</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_date">New Date</string>
    <string name="enter_dates_name">Date\'s Name</string>
    <string name="action_login_signup">Sign Up</string>
    <string name="sign_out">sign out</string>
    <string name="disconnect">disconnect</string>
    <string name="loading">loading :)</string>
    <string name="text_keep_your_dates_on_lock">Keep Your Love Life On Lock</string>
    <string name="text_dates">Dates</string>
    <string name="text_profile">Profile</string>
    <string name="text_your_next_date">Your Next Date</string>
    <string name="text_your_last_date">Your Last Date</string>
    <string name="sign_up_message">Looks like its the first time you use RendeVu, please add your phone number</string>
</resources>
