<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chaperones"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/text_chaperones"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_dates"
        android:enabled="true"
        android:icon="@drawable/ic_heart_border_black_24dp"
        android:title="@string/text_dates"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />

    <!-- location placeholder -->
    <!--
    <item
        android:id="@+id/action_current_location"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/current_location"
        app:showAsAction="ifRoom" />
        -->

    <!-- sign_up placeholder -->
    <item
        android:id="@+id/action_login_signup"
        android:enabled="true"
        android:icon="@android:drawable/stat_sys_upload_done"
        android:title="@string/action_login_signup"
        app:showAsAction="ifRoom" />
</menu>